--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,13 @@ video#bgvid {
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
 }
 
+.thumbs {
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
+    margin:20px auto;
+}
+
 .log {
     width:30px;
     height:30px;
@@ -626,7 +633,7 @@ video#bgvid {
 
 /* Slide 9 */
 
-#slide-9 .bcg {background-image:url('../img/subnautica_grandreef_1.jpg')}
+#slide-9 .bcg {background-image:url('../img/concept_grassy_1.jpg')}
 
 #slide-9 .big-picture-copy {  
     margin:auto;; 
@@ -636,16 +643,13 @@ video#bgvid {
 #slide-9 h3 { margin-bottom: 10px; }
 
 #slide-9 p {
-    width: auto;
     margin-bottom:10px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-/* Slide 9 */
+/* Slide 10 */
 
-#slide-10 .bcg { }
-
-#slide-10 .hsContent { vertical-align: top; }
+#slide-10 .bcg { background-image:url('../img/subnautica_mountain_1.jpg'); }
 
 #slide-10 .big-picture-copy {  
     margin:auto;
@@ -678,33 +682,50 @@ video#bgvid {
     float:left;
 }
 
-/* Slide 10 */
+/* Slide 11 */
 
-#slide-11 .bcg {
+#slide-11 .bcg {background-image:url('../img/sea_background_2.jpg')}
+
+#slide-11 .big-picture-copy {  
+    margin:auto;; 
+    width: 600px;
+}
+
+#slide-11 h3 { margin-bottom: 10px; }
+
+#slide-11 p {
+    margin-bottom:10px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+
+/* Slide 12 */
+
+#slide-12 .bcg {
     background-image:url('../img/subnautica_emperor_1.jpg');
     background-attachment: inherit;
     text-align: center;
 }
 
-#slide-11 h2 {
+#slide-12 h2 {
     color:#fff;
 }
 
-#slide-11 p {
+#slide-12 p {
     margin-bottom:30px;
     width: auto !important;
     max-width: 600px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-#slide-11 .dialog {
+#slide-12 .dialog {
     position: absolute;
     bottom: 68px;
     right: 30px;    
     word-wrap:break-word;
 }
 
-#slide-11 .dialog p {
+#slide-12 .dialog p {
     margin:auto;
 }
 
