--- a/css/narrow.css
+++ b/css/narrow.css
@@ -235,6 +235,14 @@ video#bgvid {
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
 }
 
+.thumbs {
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.6);
+    margin:20px auto;
+    max-width: 60% !important;
+}
+
 .log {
     width:30px;
     height:30px;
@@ -505,74 +513,74 @@ video#bgvid {
 
 /* Slide 9 */
 
-#slide-9 .bcg { }
+#slide-9 .bcg {background-image:url('../img/concept_grassy_1.jpg')}
 
 #slide-9 .big-picture-copy {  
-    position:relative;  
-    margin:auto;
-    width:100%;
-    height:100%;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    border-radius: 0px;
+    margin:auto;; 
+    width: 600px;
 }
 
-#slide-9 .big-picture-copy h4 {
+#slide-9 h3 { margin-bottom: 10px; }
+
+#slide-9 p {
+    margin-bottom:10px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+/* Slide 10 */
+
+#slide-10 .bcg { background-image:url('../img/subnautica_mountain_1.jpg'); }
+
+#slide-10 .big-picture-copy {  
+    margin:auto;
+    margin-top: 100px; 
+    width: 600px;
+}
+#slide-10 .big-picture-copy h4 {
     text-transform: uppercase;
     font-size: 0.9em;
     font-weight: bold;
 }
 
-#slide-9 p {
+#slide-10 p {
     width: auto;
     margin-bottom:10px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-#slide-9 .hsContent {
+#slide-10 .hsContent {
     padding:0;
 }
 
-
-/* Slide 10 */
-
-#slide-10 { position: relative; }
-#slide-10 .bcg { 
-    background: #e7ffff;
-    background-image:url('../img/concept_base_1.jpg');   
-    background-position: center center;
-    background-repeat: no-repeat;
+.img-col-3 {
+    display:inline-table;
+    height:100%;
+    width:33.333%;
     background-size: cover;
-    height: 100%;
-    width: 100%;
+    background-position: center;
+    text-align:center;
+    float:left;
 }
-
-
-#slide-10-title p, #slide-10-title ul {
-    width: 100%;
-    margin-bottom:20px;
-    color: #fff;
-    font-size: 0.9em;
-}
-
-#slide-10-title ul {
-    width: 100%px;
-    margin:auto;
-    margin-bottom:20px;
-    color: #fff;
-    text-align: left;
-}
-
-#slide-10 .dialog {
-    position: absolute;
-    top: 72px;
-    left: 30px;    
-}
-
 
 /* Slide 11 */
 
-#slide-11 .bcg {
+#slide-11 .bcg {background-image:url('../img/sea_background_2.jpg')}
+
+#slide-11 .big-picture-copy {  
+    margin:auto;; 
+    width: 600px;
+}
+
+#slide-11 h3 { margin-bottom: 10px; }
+
+#slide-11 p {
+    margin-bottom:10px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+/* Slide 12 */
+
+#slide-12 .bcg {
     background: #000;
     background-image:url('../img/subnautica_emperor_1.jpg');
     background-position: center center;
@@ -583,25 +591,25 @@ video#bgvid {
     text-align: center;
 }
 
-#slide-11 h2 {
+#slide-12 h2 {
     color:#fff;
 }
 
-#slide-11 p {
+#slide-12 p {
     margin-bottom:30px;
     width: auto !important;
     max-width: 600px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-#slide-11 .dialog {
+#slide-12 .dialog {
     position: absolute;
     bottom: 68px;
     right: 30px;    
     word-wrap:break-word;
 }
 
-#slide-11 .dialog p {
+#slide-12 .dialog p {
     margin:auto;
 }
 
