--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ textarea {
 }
 
 /* ==========================================================================
-   Habitat Update
+   Seamoth Update
    ========================================================================== */
 body, html {
 	height: 100%;
@@ -351,9 +351,15 @@ video#bgvid {
     z-index: 1000;
 }
 
+#slide-3 .big-picture-copy {
+    margin: 30px auto;
+    width: 650px;
+}
+
 #slide-3 h2 {
-    float: left;
-    margin-top:100px;
+    width:600px;
+    margin: auto;
+    margin-bottom: 10px;
 }
 
 #slide-3 p {
@@ -367,107 +373,10 @@ video#bgvid {
     top: 82px;    
 }
 
-#base-diagram {
-    position: relative;
-    display: block;
-    width: 960px;
-    height: 500px;
-    background-image:url('../img/bases/base_diagram.png');
-    background-size: contain;
-    margin: auto;
-    top: 65%;
-}
-
-
-#base-arrows {
+#alterra-img {
     position: absolute;
-    top: -245px;
-    left: -360px;
-}
-
-@media (min-height: 601px) and (max-height: 768px), (max-width:768px) {
-    #base-diagram {
-        width: 634px;
-        height: 330px;
-    }
-
-    #base-arrows {
-        width: 1109px;
-        height: 660px;
-        top: -160px;
-        left: -235px;
-    }
-
-    #base-glass {
-        top: 16px;
-        left: 65px;
-    }
-
-    #base-compartment {
-        top: 316px;
-        left: 149px;
-    }
-
-    #base-vertical {
-        top: 3px;
-        right: -22px;
-    }
-
-    #base-observatory {
-        top: 270px;
-        right: -80px;
-    }
-
-    #base-moonpool {
-        top: 254px;
-        left: 75px;
-    }
-}
-
-@media (max-height: 600px) { 
-    #base-diagram {
-        width: 550px;
-        height: 286px;
-    }
-
-    #base-arrows {
-        width: 958px;
-        height: 570px;
-        top: -140px;
-        left: -205px;
-    }
-
-    #base-glass {
-        top: 10px;
-        left: 35px;
-    }
-
-    #base-compartment {
-        top: 270px;
-        left: 100px;
-    }
-
-    #base-vertical {
-        top: -1px;
-        right: -35px;
-    }
-
-    #base-observatory {
-        top: 230px;
-        right: -80px;
-    }
-
-    #base-moonpool {
-        top: 214px;
-        left: 65px;
-    }
-
- }
-
- @media (max-width:768px) {
-    #base-diagram {
-        margin-left:-40px;
-    }
+    left: 50px;
+    bottom: 50px;
 }
 
 .base-diagram-copy h4 {
@@ -476,25 +385,35 @@ video#bgvid {
     font-weight: bold;
 }
 
+
 /* Slide 4 */
-
-#slide-4 .bcg { background-image:url('../img/sea_background_3.jpg') }
-
-#slide-4 .dialog {
-    position: absolute;
-    right: 30px;
-    top: 82px;    
+#slide-4 .bcg {
+    background-image:url('../img/sea_background_3.jpg');
 }
 
-#slide-4 .log {
-    position: absolute;
-    top: 12%;
-    left: 5%;
+#slide-4 h2 {
+    color:#ddd;
 }
 
 #slide-4 p {
-    margin-bottom:10px;
-    color: rgba(255, 255, 255, 0.7);
+    color:#ddd !important;
+}
+
+#room-diagram {
+    position: relative;
+    display: block;
+    width: 960px;
+    height: 500px;
+    background-image:url('../img/bases/room_diagram.png');
+    background-size: contain;
+    margin: auto;
+    top: 65%;
+}
+
+#room-arrows {
+    position: absolute;
+    top: -245px;
+    left: -360px;
 }
 
 #seamoth-specs {
@@ -517,42 +436,66 @@ video#bgvid {
     margin: auto;
 }
 
-
 /* Slide 5 */
+
 #slide-5 .bcg {
-    background-image:url('../img/sea_background_3.jpg');
+    background-image:url('../img/sea_background_4.jpg');
+    background-attachment: inherit;
 }
 
-#slide-5 h2 {
-    color:#ddd;
+#slide-5 .big-picture-copy {  
+    margin:auto;
+    margin-top: 100px; 
+    width: 600px;
+}
+
+#slide-5 h3 { 
+    margin-top: 50px;
+    margin-bottom: 10px; 
 }
 
 #slide-5 p {
-    color:#ddd !important;
+    margin-bottom:10px;
+    width: auto;
+    max-width: 600px;
+    color: rgba(255, 255, 255, 0.7);
 }
 
-#room-diagram {
-    position: relative;
-    display: block;
-    width: 960px;
-    height: 500px;
-    background-image:url('../img/bases/room_diagram.png');
-    background-size: contain;
+#slide-5 ul {
+    list-style-position: inside;
+    width: 600px;
     margin: auto;
-    top: 65%;
+    margin-bottom:10px;
+    color: rgba(255, 255, 255, 0.7);
 }
 
-#room-arrows {
-    position: absolute;
-    top: -245px;
-    left: -360px;
+.img-col-2 {
+    display:table-cell;
+    height:100%;
+    width:50%;
+    text-align:center;
+    float:left;
+    position: relative;
+}
+
+.img-col-2 img {
+    margin: auto;
 }
 
 /* Slide 6 */
-
+#slide-6 { position: relative; }
 #slide-6 .bcg {
-    background-image:url('../img/sea_background_4.jpg');
+    background-image:url('../img/subnautica_upgrade_1.jpg');
     background-attachment: inherit;
+}
+
+#slide-6 .hsContent { vertical-align: top; }
+
+
+#slide-6 p {
+    width: auto;
+    margin-bottom:10px;
+    color: rgba(255, 255, 255, 0.7);
 }
 
 #slide-6 .big-picture-copy {  
@@ -561,39 +504,17 @@ video#bgvid {
     width: 600px;
 }
 
-#slide-6 h3 { 
-    margin-top: 50px;
-    margin-bottom: 10px; 
-}
-
-#slide-6 p {
-    margin-bottom:10px;
-    color: rgba(255, 255, 255, 0.7);
-}
-
-#slide-6 ul {
-    list-style-position: inside;
-    width: 600px;
-    margin: auto;
-    margin-bottom:10px;
-    text-align: left;
-    color: rgba(255, 255, 255, 0.7);
+#slide-6 .dialog {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;    
 }
 
 /* Slide 7 */
-#slide-7 { position: relative; }
+
 #slide-7 .bcg {
-    background-image:url('../img/subnautica_upgrade_1.jpg');
+    background-image:url('../img/sea_background_4.jpg');
     background-attachment: inherit;
-}
-
-#slide-7 .hsContent { vertical-align: top; }
-
-
-#slide-7 p {
-    width: auto;
-    margin-bottom:10px;
-    color: rgba(255, 255, 255, 0.7);
 }
 
 #slide-7 .big-picture-copy {  
@@ -602,130 +523,96 @@ video#bgvid {
     width: 600px;
 }
 
-#slide-7 .dialog {
-    position: absolute;
-    right: 30px;
-    bottom: 30px;    
+#slide-7 h3 { 
+    margin-top: 50px;
+    margin-bottom: 10px; 
+}
+
+#slide-7 p {
+    margin-bottom:10px;
+    color: rgba(255, 255, 255, 0.7);
 }
 
 /* Slide 8 */
 
-#slide-8 .bcg {
-    background-image:url('../img/sea_background_4.jpg');
-    background-attachment: inherit;
-}
+#slide-8 .bcg {background-image:url('../img/concept_grassy_1.jpg')}
 
 #slide-8 .big-picture-copy {  
-    margin:auto;
-    margin-top: 100px; 
+    margin:auto;; 
     width: 600px;
 }
 
-#slide-8 h3 { 
-    margin-top: 50px;
-    margin-bottom: 10px; 
-}
+#slide-8 h3 { margin-bottom: 10px; }
 
 #slide-8 p {
     margin-bottom:10px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-/* Slide 9 */
-
-#slide-9 .bcg {background-image:url('../img/concept_grassy_1.jpg')}
-
-#slide-9 .big-picture-copy {  
-    margin:auto;; 
-    width: 600px;
+.tf-img {
+    max-width: 100%;
+    margin: auto;
 }
 
-#slide-9 h3 { margin-bottom: 10px; }
+/* Slide 9 */
+
+#slide-9 .bcg { background-image:url('../img/subnautica_mountain_1.jpg'); }
+
+#slide-9 .big-picture-copy {  
+    margin:auto;
+    margin-top: 100px; 
+    width: 600px;
+}
+#slide-9 .big-picture-copy h4 {
+    text-transform: uppercase;
+    font-size: 0.9em;
+    font-weight: bold;
+}
 
 #slide-9 p {
     margin-bottom:10px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-/* Slide 10 */
-
-#slide-10 .bcg { background-image:url('../img/subnautica_mountain_1.jpg'); }
-
-#slide-10 .big-picture-copy {  
-    margin:auto;
-    margin-top: 100px; 
-    width: 600px;
-}
-#slide-10 .big-picture-copy h4 {
-    text-transform: uppercase;
-    font-size: 0.9em;
-    font-weight: bold;
-}
-
-#slide-10 p {
-    width: auto;
-    margin-bottom:10px;
-    color: rgba(255, 255, 255, 0.7);
-}
-
-#slide-10 .hsContent {
+#slide-9 .hsContent {
     padding:0;
 }
 
-.img-col-3 {
-    display:inline-table;
-    height:100%;
-    width:33.333%;
-    background-size: cover;
-    background-position: center;
-    text-align:center;
+#slide-9 .thumbs {
     float:left;
-}
-
-/* Slide 11 */
-
-#slide-11 .bcg {background-image:url('../img/sea_background_2.jpg')}
-
-#slide-11 .big-picture-copy {  
-    margin:auto;; 
-    width: 600px;
-}
-
-#slide-11 h3 { margin-bottom: 10px; }
-
-#slide-11 p {
-    margin-bottom:10px;
-    color: rgba(255, 255, 255, 0.7);
+    margin:20px;
 }
 
 
-/* Slide 12 */
 
-#slide-12 .bcg {
+
+/* Slide 10 */
+
+#slide-10 .bcg {
     background-image:url('../img/subnautica_emperor_1.jpg');
     background-attachment: inherit;
     text-align: center;
 }
 
-#slide-12 h2 {
+#slide-10 h2 {
     color:#fff;
 }
 
-#slide-12 p {
+#slide-10 p {
     margin-bottom:30px;
     width: auto !important;
     max-width: 600px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-#slide-12 .dialog {
+#slide-10 .dialog {
     position: absolute;
     bottom: 68px;
     right: 30px;    
     word-wrap:break-word;
 }
 
-#slide-12 .dialog p {
+#slide-10 .dialog p {
     margin:auto;
 }
 
@@ -760,7 +647,7 @@ video#bgvid {
 	display: table-cell;
 	vertical-align: middle;
 	color: #ebebeb;
-	padding: 0 8%;
+	padding: 20px 8%;
 	text-align: center
 }
 	.hsContent h2,
@@ -945,6 +832,24 @@ video#bgvid {
        display: none;
     }
 
+}
+
+.cent-out {
+    float: left;
+    position: relative;
+    left: 50%;
+}
+
+.cent-in {
+    float: left;
+    position: relative;
+    left: -50%;
+}
+
+.cent-top {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 /* ==========================================================================
